# cpp-travis-integration-old

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/exec/myexec/: myexec.cpp
src/lib/mylib/: CMakeLists.txt  mylib.cpp
src/lib/mylib/include/mylib/: myheader.hpp
src/lib/mylib/test/: CMakeLists.txt  mylib-tests.cpp
test_package/: CMakeLists.txt
test_package/src/: conan-test.cpp
